# NumgleCpp

./: .clang-format  .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  format.bat
.github/workflows/: depoly-image.yml
src/NumgleCpp/: CMakeLists.txt  DatasetRepository.h  NumgleApp.h  UTF8Decoder.h  main.cpp
